# async-rust-lsp

./: .env.example  .gitignore  .lsp.json  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
examples/: probe.rs  probe_with_config.rs
hooks/: hooks.json
src/: config.rs  lib.rs  main.rs
src/agent_template/: __init__.py  env.py  main.py
src/rules/: cancel_unsafe_in_select.rs  mod.rs  mutex_across_await.rs
tests/: integration_tests.rs
tests/fixtures/: bad_cancel_unsafe_in_select.rs  bad_mutex_across_await.rs  good_cancel_safe_in_select.rs  good_no_mutex_across_await.rs
