[package]
name = "async-rust-lsp"
version = "0.2.1"
edition = "2021"
description = "LSP server that detects tokio::sync::Mutex guards held across .await points — a pattern clippy misses"
license = "MIT"
repository = "https://github.com/rgbkrk/async-rust-lsp"
homepage = "https://github.com/rgbkrk/async-rust-lsp"
keywords = ["lsp", "tokio", "async", "deadlock", "lint"]
categories = ["development-tools"]
readme = "README.md"
exclude = ["src/agent_template/", ".claude-plugin/", "hooks/", ".lsp.json", ".env*", "uv.lock", "pyproject.toml"]

[lib]
name = "async_rust_lsp"
path = "src/lib.rs"

[[bin]]
name = "async-rust-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
