[package]
name = "async-rust-lsp"
version = "0.3.1"
edition = "2021"
description = "LSP server for tokio async antipatterns: Mutex guards across .await points and cancel-unsafe futures inside select! arms"
license = "MIT"
repository = "https://github.com/rgbkrk/async-rust-lsp"
homepage = "https://github.com/rgbkrk/async-rust-lsp"
keywords = ["lsp", "tokio", "async", "deadlock", "lint"]
categories = ["development-tools"]
readme = "README.md"
exclude = [
    ".claude/",
    ".claude-plugin/",
    ".github/",
    ".lsp.json",
    ".env*",
    "CLAUDE.md",
    "hooks/",
    "pyproject.toml",
    "src/agent_template/",
    "uv.lock",
]

[lib]
name = "async_rust_lsp"
path = "src/lib.rs"

[[bin]]
name = "async-rust-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
