[project]
name = "my-agent"
version = "0.1.0"
description = "Claude Agent SDK project with Bedrock auth"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "anyio>=4.0",
]

[project.scripts]
my-agent = "agent_template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_template"]
